changed remove to get for metrics

--- a/stash.properties
+++ b/stash.properties
@@ -2,14 +2,14 @@
 #
 ##  Currently ONLY 1 Stash URL can be monitored using REST API
 #
-### STASH REST API URL ###
-## Port Number may not be required 
+### STASH REST API URL ### 
+## URI "/rest/api/1.0/repos" IS REQUIRED
 ## Example: http://<StashHostName>:<Port>/rest/api/1.0/repos
 StashURL = http://localhost:7990/rest/api/1.0/repos
 StashUserName = admin
 StashPassword = admin
-### Destination of metrics in Investigator uner EPAgent ###
-MetricLocation = Stash Health
+### Destination of metrics in Investigator under EPAgent ###
+MetricLocation = Stash Health TestAgain
 
 ### EPAGENT Connection ###
 ##
@@ -23,7 +23,7 @@ EPAgentPort = 9080
 #
 # Time interval in minutes the Agent polls for data.
 # Default value is 5 minutes if not provided.
-delaytime=1
+delaytime= 15
 
 
 ###LOGGING PROPERTIES ###
